# franka_learning_from_demonstrations

./: .gitmodules  README.md  requirements.txt
manipulation_tasks_panda/box_localization/: CMakeLists.txt  package.xml  setup.py
manipulation_tasks_panda/box_localization/cfg/: filter_values_config.cfg
manipulation_tasks_panda/box_localization/cfg/last_day/: params.yaml
manipulation_tasks_panda/box_localization/cfg/template/: params.yaml
manipulation_tasks_panda/box_localization/cfg/template_afternoon/: params.yaml
manipulation_tasks_panda/box_localization/cfg/template_byod_last/: params.yaml
manipulation_tasks_panda/box_localization/gui/: __init__.py  gui_template.py  record_template.py
manipulation_tasks_panda/box_localization/launch/: box_localization.launch  camera.launch  record_template.launch
manipulation_tasks_panda/box_localization/scripts/: active_localizer  localizer_node  localizer_service  localizer_sift.py  reconfigure_filter_values  slider_node.py  template_matching.py
manipulation_tasks_panda/box_localization/srv/: ComputeLocalization.srv
manipulation_tasks_panda/task_board_localization/: CMakeLists.txt  package.xml
manipulation_tasks_panda/task_board_localization/config/: board_touch_config.yaml  visual_board_detection.yaml
manipulation_tasks_panda/task_board_localization/launch/: haptic_board_detection.launch  visual_board_detection.launch
manipulation_tasks_panda/task_board_localization/models/: README.md  reference_box_point_cloud.ply  transform_box_ref_icra_thur.npy  transform_box_ref_icra_thur_2.npy  transform_box_ref_icra_thur_holding.npy
manipulation_tasks_panda/task_board_localization/scripts/: haptic_board_detection  visual_board_detection_client  visual_board_detection_server
manipulation_tasks_panda/task_board_localization/srv/: PointDetect.srv
manipulation_tasks_panda/trajectory_manager/: CMakeLists.txt  endeffector-config.json  package.xml  setup.py
manipulation_tasks_panda/trajectory_manager/config/: transforms.yaml
manipulation_tasks_panda/trajectory_manager/launch/: controller_camera.launch  home.launch  play_all_skills.launch  play_skill.launch  record_skill.launch
manipulation_tasks_panda/trajectory_manager/scripts/: Learning_from_Demonstration.py  camera_feedback.py  feedback.py  home.py  insertion.py  lfd.py  lfd_image  lfd_image.py  panda.py  play_all  play_skill.py  playback_trajectory  playback_transform_trajectory  record_template.py  recording_trajectory  slider_control.py  slider_feedback.py  transfom.py  transform.py  visual_servoing.py
manipulation_tasks_panda/trajectory_manager/trajectories/: README.md  a.npz  blue.npz  calibrate.npz  peg_pick.npz  peg_pick_red.npz  peg_place.npz  peg_push.npz  red.npz  slider_green_forward.npz
object_localization/: CMakeLists.txt  package.xml  setup.py
object_localization/cfg/: filter_values_config.cfg
object_localization/cfg/demo/: params.yaml
object_localization/cfg/template/: params.yaml
object_localization/config/: camera.rviz  camera_transform.yaml  settings.yaml
object_localization/gui/: gui_template.py
object_localization/launch/: box_localization.launch  camera.launch  depth_camera.launch  record_template.launch  rqt_reconfigure.launch
object_localization/scripts/: active_localizer  draw_pcl.py  evaluate_study.py  global_registration_service  global_registration_service.py  global_registration_study.pkl  iterative_registration_service  localizer_service  parameter_tuning_global_registration.py  reconfigure_filter_values  record_template.py  run_global_registration.py  save_one_pointcloud_as_ply.py  static_transform_camera.py  transform_pcl.py
object_localization/src/object_localization/: global_registration.py
object_localization/srv/: GlobalRegistrationLocalizer.srv  IterativeRegistrationLocalizer.srv  SavingPointcloud.srv
object_localization/test/: gui_test.py
skills_manager/: CMakeLists.txt  package.xml
skills_manager/config/: settings.yaml
skills_manager/launch/: home.launch  play_all_skills.launch  play_skill.launch  record_skill.launch
skills_manager/scripts/: camera_feedback.py  camera_utils_node.py  feedback.py  home.py  insertion.py  lfd.py  play_all_skills.py  play_skill.py  record_skill.py  risk_aware_loop.py  transfom.py
(+15 files in other folders)
